[gd_scene load_steps=4 format=2]

[ext_resource path="res://asset/ui/fonts/montserrat_eb_16.tres" type="DynamicFont" id=1]
[ext_resource path="res://asset/ui/fonts/montserrat_eb_48.tres" type="DynamicFont" id=2]
[ext_resource path="res://asset/scene/game_ui/battle_result/battle_result.gd" type="Script" id=3]

[node name="battle_result" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 593.0

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 1010.0
margin_bottom = 52.0
size_flags_vertical = 0
custom_fonts/font = ExtResource( 2 )
text = "Battle is over!"
align = 1
valign = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 56.0
margin_right = 1010.0
margin_bottom = 502.0
size_flags_vertical = 3

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/HBoxContainer2"]
margin_right = 503.0
margin_bottom = 446.0
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer2/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 496.0
margin_bottom = 439.0
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2/PanelContainer/VBoxContainer"]
margin_right = 489.0
margin_bottom = 28.0
custom_fonts/font = ExtResource( 1 )
text = "Player"
align = 1

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/HBoxContainer2/PanelContainer/VBoxContainer"]
margin_top = 32.0
margin_right = 489.0
margin_bottom = 432.0
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/HBoxContainer2/PanelContainer/VBoxContainer/ScrollContainer"]
margin_right = 489.0
size_flags_horizontal = 3
columns = 4

[node name="PanelContainer2" type="PanelContainer" parent="VBoxContainer/HBoxContainer2"]
margin_left = 507.0
margin_right = 1010.0
margin_bottom = 446.0
size_flags_horizontal = 3

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/HBoxContainer2/PanelContainer2"]
margin_left = 7.0
margin_top = 7.0
margin_right = 496.0
margin_bottom = 439.0
alignment = 1

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer2/PanelContainer2/VBoxContainer2"]
margin_right = 489.0
margin_bottom = 28.0
custom_fonts/font = ExtResource( 1 )
text = "Bot"
align = 1

[node name="ScrollContainer2" type="ScrollContainer" parent="VBoxContainer/HBoxContainer2/PanelContainer2/VBoxContainer2"]
margin_top = 32.0
margin_right = 489.0
margin_bottom = 432.0
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/HBoxContainer2/PanelContainer2/VBoxContainer2/ScrollContainer2"]
margin_right = 489.0
size_flags_horizontal = 3
columns = 4

[node name="Button" type="Button" parent="VBoxContainer"]
margin_top = 506.0
margin_right = 1010.0
margin_bottom = 586.0
rect_min_size = Vector2( 80, 80 )
size_flags_vertical = 8
custom_fonts/font = ExtResource( 2 )
text = "Exit Battle"
[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_Button_pressed"]
